<?xml version="1.0" encoding="utf-8"?>

<com.example.daylight.util.ScrollChildSwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/habitsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/habitsLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/habits_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noHabits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/noHabitsIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_assignment_turned_in_24dp"
                android:contentDescription="@string/nohabitsicon" />

            <TextView
                android:id="@+id/noHabitsMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_habits_all"
                android:layout_marginBottom="@dimen/list_item_padding" />

            <TextView
                android:id="@+id/noHabitsAdd"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/touch_feedback"
                android:gravity="center"
                android:text="@string/no_habits_add" />

        </LinearLayout>
    </RelativeLayout>
</com.example.daylight.util.ScrollChildSwipeRefreshLayout>

